test/Harper/Tests/Good/issue001_bool1.har
f :: Integer -> Integer;
f n = 2 * n;

main :: Bool;
main = (f 42 == 84) and (f 2 <= f 4) and (f 2 < f 5) and (true and not false);