test/Harper/Tests/Bad/issue003_invType.har
main :: Integer;
main = g 42;

g :: Integer -> Integer;
g n = f n "Str";

f :: Integer -> Integer -> Integer;
f x y = x * y;
